[gd_scene load_steps=7 format=3 uid="uid://cnk3sg58g6p1h"]

[ext_resource type="Script" uid="uid://26ej61743gcr" path="res://projectile_scenes_scripts/boss_one_projectile_one.gd" id="1_fc4gp"]
[ext_resource type="Resource" uid="uid://5f80aenk6hkp" path="res://resources/boss_one.tres" id="2_pw0ai"]
[ext_resource type="Texture2D" uid="uid://ceho5486v3it5" path="res://graphics/Projectiles/elder wep.png" id="2_sdvf8"]

[sub_resource type="Animation" id="Animation_sdvf8"]
resource_name = "main_attack"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.366667, 0.533333, 1, 1.21, 1.45, 1.72),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.466667, 0.633333, 1.06667, 1.23333, 1.5, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": [0],
"method": &"hit_box_matcher"
}, {
"args": [1],
"method": &"hit_box_matcher"
}, {
"args": [2],
"method": &"hit_box_matcher"
}, {
"args": [3],
"method": &"hit_box_matcher"
}, {
"args": [4],
"method": &"hit_box_matcher"
}, {
"args": [5],
"method": &"hit_box_matcher"
}, {
"args": [6],
"method": &"hit_box_matcher"
}, {
"args": [7],
"method": &"hit_box_matcher"
}]
}

[sub_resource type="Animation" id="Animation_pw0ai"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lt0ib"]
_data = {
&"RESET": SubResource("Animation_pw0ai"),
&"main_attack": SubResource("Animation_sdvf8")
}

[node name="BossOneProjectileOne" type="Area2D" groups=["enemy_projectiles"]]
collision_layer = 132
collision_mask = 64
script = ExtResource("1_fc4gp")
boss_stats = ExtResource("2_pw0ai")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_sdvf8")
hframes = 8

[node name="frame1" type="Polygon2D" parent="."]
color = Color(0.831373, 0.831373, 0.831373, 0)
polygon = PackedVector2Array(-11, -27, -5, -32, 4, -26, 14, -9, 18, -1, 18, 3, 12, 14, 4, 27, -3, 31, -12, 27, -12, 22, -8, 19, -11, 11, -6, 6, -7, 1, -7, -3, -6, -5, -11, -12, -8, -18, -12, -23)

[node name="frame2" type="Polygon2D" parent="."]
color = Color(1, 1, 1, 0)
polygon = PackedVector2Array(-3, -31, -5, -26, 4, -23, 11, -15, 17, -2, 17, 3, 8, 20, 3, 25, -4, 24, -3, 30, -11, 30, -17, 25, -17, 21, -10, 17, -13, 14, -12, 7, -9, 8, -8, -8, -12, -8, -11, -18, -18, -22, -17, -26, -11, -31)

[node name="frame3" type="Polygon2D" parent="."]
color = Color(1, 1, 1, 0)
polygon = PackedVector2Array(-13, -28, -23, -18, -23, -7, -23, 18, -13, 27, -4, 26, 6, 23, 11, 17, 14, 9, 18, 3, 17, -3, 15, -11, 11, -15, 8, -20, -1, -25)

[node name="frame4" type="Polygon2D" parent="."]
color = Color(1, 1, 1, 0)
polygon = PackedVector2Array(-11, -28, -21, -20, -27, -8, -27, 9, -21, 20, -13, 26, -7, 28, 0, 25, 6, 23, 13, 14, 19, 3, 18, -6, 14, -14, 8, -21, 1, -26)

[node name="frame5" type="Polygon2D" parent="."]
color = Color(1, 1, 1, 0)
polygon = PackedVector2Array(-12, -28, -26, -14, -27, 1, -27, 11, -21, 18, -10, 28, 2, 25, 10, 19, 16, 9, 20, -2, 16, -10, 11, -19, -2, -27)

[node name="frame6" type="Polygon2D" parent="."]
color = Color(1, 1, 1, 0)
polygon = PackedVector2Array(-10, -28, -25, -11, -25, 2, -21, 15, -9, 22, 5, 22, 14, 12, 17, -1, 14, -15, 9, -21)

[node name="frame7" type="Polygon2D" parent="."]
color = Color(1, 1, 1, 0)
polygon = PackedVector2Array(-9, -23, -21, -6, -15, 11, -4, 21, 11, 7, 13, -9, -2, -22)

[node name="frame8" type="Polygon2D" parent="."]
color = Color(1, 1, 1, 0)
polygon = PackedVector2Array(-5, -20, -19, -8, -7, 7, 4, 12, 16, -2, 12, -16, 1, -20)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lt0ib")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
